# plages-qc

./: .gitignore  README.md  beaches_db.json  main.py  plages.json  pyproject.toml  requirements.txt  sheets.py
.github/workflows/: scrape.yml
